--- a/README
+++ b/README
@@ -1,2 +1,8 @@
-Android chinese checkers game
-Build with AndEngine framework
+Yet another android chinese checkers / peg solitaire game.
+Build with AndEngine framework: www.andengine.org
+
+Several boards available. 
+
+For any info or detail requests:
+fedepaol (at) gmail.com
+
