Aligned to current released version

--- a/assets/SLAwards.bundle/en.lproj/Localizable.strings
+++ b/assets/SLAwards.bundle/en.lproj/Localizable.strings
@@ -8,3 +8,11 @@
 "Award.com.pegdroid.asymmetrical.description" = "Asymmetrical Completed";
 "Award.com.pegdroid.diamond.title" = "Diamond Master";
 "Award.com.pegdroid.diamond.description" = "Diamond completed";
+"Award.com.pegdroid.smalldiamond.title" = "Small Diamond Master";
+"Award.com.pegdroid.smalldiamond.description" = "Diamond completed";
+"Award.com.pegdroid.ninebynine.title" = "Nine by nine master";
+"Award.com.pegdroid.ninebynine.description" = "Master of nine by nine";
+"Award.com.pegdroid.6x6.title" = "Six by Six Master";
+"Award.com.pegdroid.6x6.description" = "Six by Six Completed";
+"Award.com.pegdroid.wiglebs.title" = "Wigleb's Master";
+"Award.com.pegdroid.wiglebs.description" = "Wigleb's completed";
