--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,17 +24,22 @@
     <string name="max_score_name">Best Balls Left:</string>
     <string name="do_you_want_to_restore">Do you want to restore previously saved game?</string>
     <string name="starting_new_game">Do you want to start new game?</string>
-    <string name="stall">Stall</string>
-    <string name="new_record">New Record!</string>
+    <string name="stall">STALL</string>
+    <string name="new_record">NEW RECORD</string>
     <string name="no_more_moves">No more moves available. \nRemaining balls %d. Do you want to start new game?</string>
-    <string name="no_more_moves_record">Remaining balls: %1$d\n in %3$s\nOld Record: %2$d balls\nDo you want to start new game?</string>
+    <string name="no_more_moves_record">Remaining balls: %1$d in %3$s\nOld Record: %2$d balls\nDo you want to start new game?</string>
 	<string name="achievement">New Achievement!</string>
 	<string name="check_leaderboard">Scores</string>
-	<string name="share_to_social">Share your result</string>
+	<string name="share_to_social">Share</string>
 	<string name="tell_a_friend">Tell a friend</string>
 	<string name="you_are_now_master_of">You are now master of %s</string>
 	<string name="no_more_moves_record_time">Remaining balls: %1$d \nOld record time: %2$s\nNew record time: %3$s\nDo you want to start new game?</string>
 	<string name="update">New update:\nComplete a board faster to get a better score!\nChallenge people from all over the world on scoreloop</string>
-	
+	<string name="check_game">I found this nice game</string>
+	<string name="try_pegdroid">Give peg solitaire for android a try: goo.gl/N6AsD</string>
+    <string name="no_thanks">No, thanks</string>
+    <string name="yes_please">Ok</string>
+    <string name="please_vote">Help spread the word</string>
+    <string name="if_you_enjoyed">If you like this app, please rate it in the Android Market. Thanks!</string>
     
 </resources>
