--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,7 @@
   limitations under the License.
 -->
 <resources>
+	<string name="options">Options</string>
     <string name="app_name">PegDroid</string>
     <string name="new_game">New</string>
     <string name="play_again">Play again</string>
